# sirius

./: .clang-format  .gitignore  CMakeLists.txt  CMakeOptions.cmake  CMake_options.cmake  README.md  deps.txt  meson.build  meson_options.txt
Sirius/include/sirius/: CMakeLists.txt  meson.build  sirius_attributes.h  sirius_cpu.h  sirius_file.h  sirius_thread.h  sirius_time.h  sirius_version.h.in
Sirius/include/sirius/internal/: common.h  thread.h
Sirius/include/sirius/thread/: thread.h
Sirius/include/sirius/utils/: log.h
Sirius/lib/: CMakeLists.txt  meson.build
Sirius/lib/sirius/: CMakeLists.txt  meson.build  sirius_mutex.c  sirius_thread.c  sirius_time.c
Sirius/lib/sirius/internal/: attributes.h  thread.cpp
Sirius/lib/sirius/pkgconfig/: CMakeLists.txt  meson.build  sirius.pc.in
cmake/: CMakeLists.txt  Config.cmake.in  external_option.cmake  internal_option.cmake  requirement.txt  sirius.pc.in  template.pc.in  utils.cmake
cmake/Sirius/: CMakeLists.txt  Config.cmake.in  external_option.cmake  sirius.pc.in
cmake/unittests/: CMakeLists.txt  external_option.cmake
include/sirius/: CMakeLists.txt  meson.build  sirius_attributes.h  sirius_common.h.in  sirius_cond.h  sirius_errno.h  sirius_log.h  sirius_macro.h  sirius_math.h  sirius_mutex.h  sirius_queue.h  sirius_sem.h  sirius_spinlock.h  sirius_thread.h  sirius_time.h
include/sirius/custom/: custom_log.h  custom_macro.h  custom_math.h  custom_thread.h  custom_time.h  errno.h  log.h  macro.h  math.h  thread.h  time.h
include/sirius/internal/: attributes.h  decls.h  errno.h  init.h  internal_init.h  internal_log.h  internal_sys.h  internal_thread.h  log.h  macro.h  sem.h  sirius_common.h.in  thread.h  time.h
meson/unittests/: meson.build
sirius/: CMakeLists.txt  meson.build
sirius/include/sirius/: CMakeLists.txt  attributes.h  config.h  cpu.h  file.h  macro.h  meson.build  version.h.in
sirius/include/sirius/c/: fs.h  time.h
sirius/include/sirius/foundation/: log.h  structor.h  sync.h  thread.h
sirius/include/sirius/inner/: attributes.h  common.h  macro.h
sirius/include/sirius/internal/: attributes.h  macro.h
sirius/include/sirius/kit/: log.h  queue.h
sirius/include/sirius/thread/: cond.h  cpu.h  macro.h  mutex.h  sem.h  spinlock.h  thread.h
sirius/include/sirius/utils/: fs.h  log.h  thread.h
sirius/lib/: CMakeLists.txt  meson.build
sirius/lib/c/: CMakeLists.txt  meson.build  time.c
sirius/lib/c/fcntl/: fs.c  fs.cpp
sirius/lib/c/pkgconfig/: CMakeLists.txt  meson.build
sirius/lib/cmake/: CMakeLists.txt
sirius/lib/foundation/: CMakeLists.txt  attributes.h  initializer.c  initializer.h  meson.build  structor.cpp  structor.h
sirius/lib/foundation/log/: log.cpp  log.h
sirius/lib/foundation/pkgconfig/: CMakeLists.txt  meson.build
sirius/lib/foundation/thread/: thread.c  thread.cpp  thread.h  thread.hpp
sirius/lib/kit/: CMakeLists.txt  log.cpp  meson.build  queue.c
sirius/lib/kit/pkgconfig/: CMakeLists.txt  meson.build
sirius/lib/thread/: CMakeLists.txt  cond.c  cond.h  meson.build  mutex.c  mutex.h  sem.c  sem.h  thread.c
sirius/lib/thread/inner/: mutex.h  thread.cpp  thread.h
sirius/lib/thread/internal/: mutex.h  thread.cpp  thread.h
sirius/lib/thread/pkgconfig/: CMakeLists.txt  meson.build
sirius/lib/thread/posix/: thread.c  thread.cpp
sirius/lib/thread/windows/: thread.cpp
sirius/lib/utils/: CMakeLists.txt  attributes.h  config.h  decls.h  initializer.c  initializer.h  macro.h  namespace.hpp  time.hpp  utils.h
sirius/lib/utils/log/: log.cpp  log.h  log.hpp
sirius/lib/utils/thread/: thread.c  thread.h
sirius/utils/: args.hpp  attributes.h  config.h  decls.h  env.h  errno.h  file.hpp  fs.hpp  gmutex.hpp  io.h  io.hpp  log.h  log.hpp  namespace.hpp  ns.hpp  process.hpp  thread.hpp  time.hpp  trace.hpp  utils.h
sirius/utils/fs/: fs.c
sirius/utils/log/: daemon.hpp  exe.hpp  shm.hpp  utils.hpp
sirius/utils/process/: mutex.hpp  process.hpp  sys.hpp
src/: CMakeLists.txt  meson.build  sirius_common.c  sirius_cond.c  sirius_log.c  sirius_math.c  sirius_mutex.c  sirius_queue.c  sirius_sem.c  sirius_thread.c  sirius_time.c
src/cmake/: CMakeLists.txt  Config.cmake.in
src/internal/: decls.h  errno.h  init.c  init.h  initializer.c  initializer.h  internal_init.c  internal_log.c  log.c  log.h  mutex.h  thread.cpp  thread.h
src/pkgconfig/: CMakeLists.txt  sirius.pc.in
test/: CMakeLists.txt  meson.build
test/c/: CMakeLists.txt  meson.build
test/c/time/: Time1.c  Time2.cpp  meson.build
test/foundation/log/: Log1.cpp  meson.build
test/inner/: utils.h
test/internal/: config.h  utils.h
test/kit/: CMakeLists.txt  meson.build
test/kit/log/: CMakeLists.txt  Log1.cpp  meson.build
test/kit/queue/: Queue1.cpp  meson.build
test/src/: CMakeLists.txt  meson.build
test/src/cond/: CMakeLists.txt  Cond1.cpp
test/src/internal/: utils.h
test/src/lock/: CMakeLists.txt  Lock1.c  Lock2-Mutex.cpp
test/src/log/: CMakeLists.txt  Log1.c  meson.build
test/src/queue/: CMakeLists.txt  Queue1.cpp  meson.build
test/src/sem/: CMakeLists.txt  Sem1.c  meson.build
test/src/thread/: CMakeLists.txt  Thread1.cpp  Thread2.cpp  Thread3.c  Thread3.cpp  Thread4.c  Thread5.cpp
test/src/time/: CMakeLists.txt  Time1.c  Time2.cpp
test/thread/: CMakeLists.txt  meson.build
test/thread/cond/: Cond1.cpp  meson.build
test/thread/lock/: CMakeLists.txt  Lock1.c  Lock2-Mutex.cpp  meson.build
test/thread/sem/: Sem1.c  meson.build
test/thread/thread/: CMakeLists.txt  Thread1.cpp  Thread2.cpp  Thread3.cpp  Thread4.c  Thread5.cpp  meson.build
test/utils/: CMakeLists.txt
test/utils/log/: CMakeLists.txt  Log1.cpp  meson.build
unittests/: CMakeLists.txt
unittests/cmake/: CMakeLists.txt  external_option.cmake
unittests/src/: test.h  test1.1_thread.cpp  test1.2_thread.cpp  test1.3_thread.c  test2.1_time.c  test2.2_time.cpp  test3.1_sem.cpp  test4.1_lock.c  test5.1_cond.c  test6.1_queue.c  test7.1_log.c  test_cond_1.c  test_log_1.c  test_mutex_1.c  test_queue_1.c  test_sem_1.c  test_thread_1.c  test_thread_2.c  test_thread_3.c  test_time_1.c  test_time_2.c
(+30 files in other folders)
