# --- Global ---
option('target-namespace', type: 'string', value: 'Sirius',
        description: 'The meson interaction file namespace of the target')

option('target-library-name-libsirius', type: 'string', value: 'sirius',
        description: 'The name of the target library `sirius`')

option('build-object-only', type : 'boolean', value : false,
        description : 'Build objects only')

# --- Sirius ---
# Sirius
option('warning-all', type: 'boolean', value: true,
        description : 'Enable all compile warnings')

option('warning-as-error', type: 'boolean', value: false,
        description : 'Regard all warnings as errors')

option('pic-enable', type: 'boolean', value: true,
        description : 'Position independent, enable `-fPIC/-fPIE`')

option('log-level', type: 'integer', value: 3,
        description : 'Log level: 0: disable the log; 1: error; 2: warn; 3: info; 4: debug')

option('asan', type: 'boolean', value: false,
        description : 'Enable address sanitizer')

# Sirius::sirius
option('module-print-name', type: 'string', value: 'Sirius::sirius',
        description : 'Sirius module print name')

option('log-buf-size', type: 'integer', value: 2048,
        description : 'The maximum number of bytes written to the file descriptor at a single time')

# --- Test ---
option('test-enable', type : 'boolean', value : false,
        description : 'Enable test')

option('test-pie-enable', type: 'boolean', value: false,
        description : 'Position independent, enable `-fPIC/-fPIE`')

option('test-extra-link-directories', type: 'string', value: '',
        description : 'The directory of `libs` that require additional links to the `sirius test`, e.g., \"/path/lib1;/path/lib2\"')

option('test-extra-link-libraries', type: 'string', value: '',
        description : 'The name of `libs` that require additional links to the `sirius test`, e.g., \"pthread;stdc++\"')

option('test-log-level', type: 'integer', value: 3,
        description : 'Test log level: 0: disable the log; 1: error; 2: warn; 3: info; 4: debug')
